Fix T57583: Assert when moving object parented to curve vertex

Can not reliably evaluate object's transform from the original one.

Still not ideal, see the comment in the code.